exports[`Watch mode flows Pressing "P" enters pattern mode 1`] = `
"[MOCK - cursorHide]
[MOCK - clearScreen]

 Pattern Mode Usage
 › Press ESC to exit pattern mode.


 pattern › p
[MOCK - cursorSavePosition]


 Pattern matches 11 files.

  › path/to/file1-test.js

  › path/to/file2-test.js

  › path/to/file3-test.js

  › path/to/file4-test.js

  › path/to/file5-test.js

  › path/to/file6-test.js

  › path/to/file7-test.js

  › path/to/file8-test.js

  › path/to/file9-test.js

  › path/to/file10-test.js

  › and 1 more file
[MOCK - cursorRestorePosition]
[MOCK - cursorShow]"
`;

exports[`Watch mode flows Pressing "P" enters pattern mode 2`] = `
"[MOCK - cursorHide]
[MOCK - clearScreen]

 Pattern Mode Usage
 › Press ESC to exit pattern mode.


 pattern › p.
[MOCK - cursorSavePosition]


 Pattern matches 11 files.

  › path/to/file1-test.js

  › path/to/file2-test.js

  › path/to/file3-test.js

  › path/to/file4-test.js

  › path/to/file5-test.js

  › path/to/file6-test.js

  › path/to/file7-test.js

  › path/to/file8-test.js

  › path/to/file9-test.js

  › path/to/file10-test.js

  › and 1 more file
[MOCK - cursorRestorePosition]
[MOCK - cursorShow]"
`;

exports[`Watch mode flows Pressing "P" enters pattern mode 3`] = `
"[MOCK - cursorHide]
[MOCK - clearScreen]

 Pattern Mode Usage
 › Press ESC to exit pattern mode.


 pattern › p.*
[MOCK - cursorSavePosition]


 Pattern matches 11 files.

  › path/to/file1-test.js

  › path/to/file2-test.js

  › path/to/file3-test.js

  › path/to/file4-test.js

  › path/to/file5-test.js

  › path/to/file6-test.js

  › path/to/file7-test.js

  › path/to/file8-test.js

  › path/to/file9-test.js

  › path/to/file10-test.js

  › and 1 more file
[MOCK - cursorRestorePosition]
[MOCK - cursorShow]"
`;

exports[`Watch mode flows Pressing "P" enters pattern mode 4`] = `
"[MOCK - cursorHide]
[MOCK - clearScreen]

 Pattern Mode Usage
 › Press ESC to exit pattern mode.


 pattern › p.*1
[MOCK - cursorSavePosition]


 Pattern matches 3 files.

  › path/to/file1-test.js

  › path/to/file10-test.js

  › path/to/file11-test.js
[MOCK - cursorRestorePosition]
[MOCK - cursorShow]"
`;

exports[`Watch mode flows Pressing "P" enters pattern mode 5`] = `
"[MOCK - cursorHide]
[MOCK - clearScreen]

 Pattern Mode Usage
 › Press ESC to exit pattern mode.


 pattern › p.*10
[MOCK - cursorSavePosition]


 Pattern matches 1 file.

  › path/to/file10-test.js
[MOCK - cursorRestorePosition]
[MOCK - cursorShow]"
`;

exports[`Watch mode flows Pressing "P" enters pattern mode 6`] = `
"[MOCK - cursorHide]
[MOCK - clearScreen]

 Pattern Mode Usage
 › Press ESC to exit pattern mode.


 pattern › p.*1
[MOCK - cursorSavePosition]


 Pattern matches 3 files.

  › path/to/file1-test.js

  › path/to/file10-test.js

  › path/to/file11-test.js
[MOCK - cursorRestorePosition]
[MOCK - cursorShow]"
`;

exports[`Watch mode flows Pressing "P" enters pattern mode 7`] = `
"[MOCK - cursorHide]
[MOCK - clearScreen]

 Pattern Mode Usage
 › Press ESC to exit pattern mode.


 pattern › p.*
[MOCK - cursorSavePosition]


 Pattern matches 11 files.

  › path/to/file1-test.js

  › path/to/file2-test.js

  › path/to/file3-test.js

  › path/to/file4-test.js

  › path/to/file5-test.js

  › path/to/file6-test.js

  › path/to/file7-test.js

  › path/to/file8-test.js

  › path/to/file9-test.js

  › path/to/file10-test.js

  › and 1 more file
[MOCK - cursorRestorePosition]
[MOCK - cursorShow]"
`;

exports[`Watch mode flows Pressing "P" enters pattern mode 8`] = `
"[MOCK - cursorHide]
[MOCK - clearScreen]

 Pattern Mode Usage
 › Press ESC to exit pattern mode.


 pattern › p.*3
[MOCK - cursorSavePosition]


 Pattern matches 1 file.

  › path/to/file3-test.js
[MOCK - cursorRestorePosition]
[MOCK - cursorShow]"
`;
